--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<header class="fejlec">
 			<div>
 				<a class="panelek" style="text-decoration: none" href="index.html" > <b> Főoldal </b> </a>
-				<a class="panelek" style="text-decoration: none" href="k%C3%B6zlekedes.html" > <b> Közlekedés </b> </a>
+				<a class="panelek" style="text-decoration: none" href="kozlekedes.html" > <b> Közlekedés </b> </a>
 				<a class="panelek" style="text-decoration: none" href="labdarugas.html"> <b> Labdarúgás </b> </a>
 				<a class="panelek" style="text-decoration: none" href="tervezes.html"> <b> Tervezés </b> </a>
 			</div>
@@ -51,12 +51,12 @@
 
 					<div class="kartya">
 						
-						<a style="text-decoration: none" href="file:///C:/Users/todacsa/Desktop/Elso%20honlap%20projeckt/k%C3%B6zlekedes.html" > <img  src="css/kepek/traktor.jpeg" alt="Közúti trkator"> </a>
+						<a style="text-decoration: none" href="kozlekedes.html" > <img  src="css/kepek/traktor.jpeg" alt="Közúti trkator"> </a>
 
 					</div>
 					<div class="kartya">
 
-						<a style="text-decoration: none" href="file:///C:/Users/todacsa/Desktop/Elso%20honlap%20projeckt/labdarugas.html"> <img  src="css/kepek/labdarugas.jpeg"> </a>
+						<a style="text-decoration: none" href="labdarugas.html"> <img  src="css/kepek/labdarugas.jpeg"> </a>
 
 					</div>
 				</div>
