--- a/közlekedes.html
+++ b/közlekedes.html
@@ -17,10 +17,10 @@
 	<body>		
 		<header class="fejlec">
 			<div>
-				<a class="panelek" style="text-decoration: none" href="file:///C:/Users/todacsa/Desktop/Elso%20honlap%20projeckt/index.html" > <b> Főoldal </b> </a>
-				<a class="panelek" style="text-decoration: none" href="file:///C:/Users/todacsa/Desktop/Elso%20honlap%20projeckt/k%C3%B6zlekedes.html" > <b> Közlekedés </b> </a>
-				<a class="panelek" style="text-decoration: none" href="file:///C:/Users/todacsa/Desktop/Elso%20honlap%20projeckt/labdarugas.html"> <b> Labdarúgás </b> </a>
-				<a class="panelek" style="text-decoration: none" href="file:///C:/Users/todacsa/Desktop/Elso%20honlap%20projeckt/tervezes.html"> <b> Tervezés </b> </a>
+				<a class="panelek" style="text-decoration: none" href="index.html" > <b> Főoldal </b> </a>
+				<a class="panelek" style="text-decoration: none" href="kozlekedes.html" > <b> Közlekedés </b> </a>
+				<a class="panelek" style="text-decoration: none" href="labdarugas.html"> <b> Labdarúgás </b> </a>
+				<a class="panelek" style="text-decoration: none" href="tervezes.html"> <b> Tervezés </b> </a>
 			</div>
 		</header>
 
