--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<header class="fejlec">
 			<div>
 				<a class="panelek" style="text-decoration: none" href="index.html" > <b> Főoldal </b> </a>
-				<a class="panelek" style="text-decoration: none" href="kozlekedes.html" > <b> Közlekedés </b> </a>
+				<a class="panelek" style="text-decoration: none" href="közlekedes.html" > <b> Közlekedés </b> </a>
 				<a class="panelek" style="text-decoration: none" href="labdarugas.html"> <b> Labdarúgás </b> </a>
 				<a class="panelek" style="text-decoration: none" href="tervezes.html"> <b> Tervezés </b> </a>
 			</div>
@@ -51,7 +51,7 @@
 
 					<div class="kartya">
 						
-						<a style="text-decoration: none" href="kozlekedes.html" > <img  src="css/kepek/traktor.jpeg" alt="Közúti trkator"> </a>
+						<a style="text-decoration: none" href="közlekedes.html" > <img  src="css/kepek/traktor.jpeg" alt="Közúti trkator"> </a>
 
 					</div>
 					<div class="kartya">
