--- a/tervezes.html
+++ b/tervezes.html
@@ -18,7 +18,7 @@
 		<header class="fejlec">
 			<div>
 				<a class="panelek" style="text-decoration: none" href="index.html"> <b> Főoldal </b> </a>
-				<a class="panelek" style="text-decoration: none" href="kozlekedes.html" > <b> Közlekedés </b> </a>
+				<a class="panelek" style="text-decoration: none" href="közlekedes.html" > <b> Közlekedés </b> </a>
 				<a class="panelek" style="text-decoration: none" href="labdarugas.html"> <b> Labdarúgás </b> </a>
 				<a class="panelek" style="text-decoration: none" href="tervezes.html"> <b> Tervezés </b> </a>
 			</div>
