--- a/labdarugas.html
+++ b/labdarugas.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
-		<!--<img src="css/kepek/szovet.jpg">-->
+		<!--<img src="https://raw.githubusercontent.com/thetothdaniel/toth_daniel_csaba_portfolio/main/css/kepek/szovet.jpg">-->
 		
 
 	</head>
