--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 			<div>
 
 				<div class="kezdoszoveg">
-					<b>Tóth Dániel Csaba vagyok második, féléves gépészmérnök hallgató a Budapesti Műszaki- és Gazdaságtudományi Egyetemen. 
+					<b>Tóth Dániel Csaba vagyok, második féléves gépészmérnök hallgató a Budapesti Műszaki- és Gazdaságtudományi Egyetemen. 
 					<br>	
-					Ebben a portfólióban a közlekedésről és a labdarúgásról szeretnék tapasztalatokat és eseményeket megosztani az ide látogatott olvasóknak.
+					Ebben a portfólióban a közlekedésről és a labdarúgásról szeretnék tapasztalatokat és eseményeket megosztani az ide látogató olvasóknak.
 					<br>
-					A közlekedés fülben a vezetésben szerzet észrevtelekről, míg a labdarúgás fülben a magyarokhoz köthető eseményekről és hírekről lehet olvasni.
+					A közlekedés fülben a vezetésben szerzett észrevtelekről, míg a labdarúgás fülben a magyarokhoz köthető eseményekről és hírekről lehet olvasni.
 
 					</b>
 				</div class="kezdokepek">
