--- a/közlekedes.html
+++ b/közlekedes.html
@@ -47,7 +47,10 @@
 			        	 </h2> 
 
 			        	 <div >
-			        	 	Jobbra kis ívben kanyarodsákor mindig elsőbbséget kell adni a gyalogos átkelőhelyen áthaladó gyalogosnak. Ennek a végrehajtását nagyban segíti a kereszteződésben kiépített közlekedési jelzőlámpa, mert akkor egyértelműen el lehet dönteni az elsőbbség megadási kötelezetséget. Mivel általában a gyalogosok és a járművek párhuzamosan haladnak egymás mellett, így egyidőben vannak az áthaladákor, de elinduláskor a gyalosoknak hamarabb vált zöldre a lámpa, majd ezek után a járműveknek és megálláskor ugyanilyen sorrendben. Ha közlekedéskor látjuk, hogy a gyalogosnak piros a lámpája van akkor nemsokára a járműveknek is piros lesz a lámpája.
+			        	 	Jobbra kis ívben kanyarodsákor mindig elsőbbséget kell adni a gyalogos átkelőhelyen áthaladó gyalogosnak. 
+						Ennek a végrehajtását nagyban segíti a kereszteződésben kiépített közlekedési jelzőlámpa, mert akkor egyértelműen el lehet dönteni az elsőbbség adási kötelezettséget. 
+						Mivel általában a gyalogosok és a járművek párhuzamosan haladnak egymás mellett, így egyidőben vannak az áthaladákor, de elinduláskor a gyalosoknak hamarabb vált zöldre a lámpa, majd ezek után a járműveknek és megálláskor ugyanilyen sorrendben. 
+						Ha közlekedéskor látjuk, hogy a gyalogosnak piros lámpája van, akkor nemsokára a járműveknek is piros lesz a lámpája.
 			        	</div>
 			        </div>			       
       		</div>
@@ -73,7 +76,10 @@
 			        </h2> 
 
 			        <div >
-			        	A mezőgazdasági járműveket a földművelési munkálatokra tervezték, hogy könnyebben el lehessen végezni a növénytermesztést. Így a beépített teljesítmények nem a haladási sebbességen, hanem a lóerőrőn van. Megfigyelhető ennek a hátrány, hogy a közúton sokan nem bírják kivárni a mezőgazdasági járművek elengedését, ezért veszély manőverezésbe kezdenek. Látható a képen is, hogy az autós előzéskor nem mérlegelt kellően a traktor sebességét és a sofőr figyelmetlenségét, ezért baleset lett az eredménye.
+			        	A mezőgazdasági járműveket a földművelési munkálatokra tervezték, hogy könnyebben el lehessen végezni a növénytermesztést. 
+					Így a beépített teljesítmény nem a haladási sebbességen, hanem a lóerőrőn van. Megfigyelhető ennek a hátránya, hogy a közúton 
+					sokan nem bírják kivárni a mezőgazdasági járművek elengedését, ezért veszélyes manőverezésbe kezdenek. Látható a képen is, hogy 
+					az autós előzéskor nem mérlegelte kellően a traktor sebességét és a sofőr figyelmetlenségét, ezért baleset lett az eredménye.
 			        </div>
 			    </div>			       
       		</div>
@@ -100,7 +106,10 @@
 			        </h2> 
 
 			        <div >
-			        	Sokan nem tudják, hogy a nehéz rakományokat szállító gépjárművek fékberendezései általában légfékkel működnek, ezért közlekedéskor a kellő követési távolságot érdemes betartani. Mivel a légtartályban tarolt levegő mennyisége korlátos, így előfordulhat, hogy jármű el kezd gurulni megállás után amikor elfogyik a levegő. Teherautók fékezéskor pedig arra lehetünk figyelmesek, hogy azonnali megállásra képések.        
+			        	Sokan nem tudják, hogy a nehéz rakományokat szállító gépjárművek fékberendezései általában légfékkel működnek, 
+					ezért közlekedéskor a kellő követési távolságot érdemes betartani. Mivel a légtartályban tárolt levegő mennyisége 
+					korlátátozott, így előfordulhat, hogy jármű elkezd gurulni megállás után, amikor elfogyik a levegő. Teherautók fékezésekor 
+					pedig arra lehetünk figyelmesek, hogy azonnali megállásra képesek.        
 			        </div>
 			    </div>			       
       		</div>
@@ -125,7 +134,9 @@
 			        </h2> 
 
 			        <div >
-			        	Az R67-es út különlegessége az úgynevezett zenélő útszakasz, amelynek technológiáját Magyarországon itt alkalmazták először. A külső sáv külső szélére ráhajtva a Republic együttes A 67-es út című dalának dallama hallható. A zenélő szakasz igénybe vételére ajánlott sebesség 80 km/h.
+			        	Az R67-es út különlegessége az úgynevezett zenélő útszakasz, amelynek technológiáját Magyarországon 
+					itt alkalmazták először. A külső sáv külső szélére ráhajtva a Republic együttes A 67-es út című dalának 
+					dallama hallható. A zenélő szakasz igénybe vételére ajánlott sebesség 80 km/h.
 			        </div>
 			    </div>			       
       		</div>
