--- a/tervezes.html
+++ b/tervezes.html
@@ -37,10 +37,17 @@
 			<div class="terv">
 
 				<div class="folia">
-					Kezdetben csak portfólióval kapcsolatos videókat néztem és weboldalakat olvastam, hogy meg tudjam érteni az egyes oldalak elemeit és felépítéseit. Ezek után töltöttem le a számomra legkönnyebben kezelhető programot, amelyikben meg tudja valósítani az elképzeléseimet. Után lerajzoltam az egyes fóliáknak a fő- és mellék elemeit, hogy a beágyazásokat egyszerűebben és könnyebben láthassam. 
+					Kezdetben csak portfólióval kapcsolatos videókat néztem és weboldalakat olvastam, hogy meg tudjam érteni az egyes oldalak 
+					elemeit és felépítéseit. Ezek után töltöttem le a számomra legkönnyebben kezelhető programot, amelyik
+					meg tudja valósítani az elképzeléseimet. Utánna lerajzoltam az egyes fóliáknak a fő- és mellékelemeit, hogy a 
+					beágyazásokat egyszerűebben és könnyebben láthassam. 
 					<br>
 					<br>		
-					Készítés során a paraméterek ellenőrzését nagyban megkönnyítette a weboldalon megtekinthető vizsgálati lehetőség, amelyet az F12 gomb lenyomásával lehet előhívni. A megjelenése után az ott található funkciókat át lehetet írni vagy eltávolítani, hogy az azonnal módosításokat hamarabb észre lehessen venni, mint a többszöri oldal frissítéseknél. Ennek hátránya is volt, hogy ha a weboldalon történő változásokat nem írtam át a programban, de erre ügyeltem.
+					Készítés során a paraméterek ellenőrzését nagyban megkönnyítette a weboldalon megtekinthető 
+					vizsgálati lehetőség, amelyet az F12 gomb lenyomásával lehet előhívni. A megjelenése után az ott 
+					található funkciókat át lehetett írni vagy eltávolítani, hogy az azonnali módosításokat hamarabb 
+					észre lehessen venni, mint a többszöri oldal frissítéseknél. Ennek hátránya is volt, ha a weboldalon 
+					történő változásokat nem írtam át a programban, mert akkor eltüntek volna az átírások, de erre ügyeltem.
 				</div>
 
 
