--- a/tervezes.html
+++ b/tervezes.html
@@ -47,7 +47,7 @@
 					vizsgálati lehetőség, amelyet az F12 gomb lenyomásával lehet előhívni. A megjelenése után az ott 
 					található funkciókat át lehetett írni vagy eltávolítani, hogy az azonnali módosításokat hamarabb 
 					észre lehessen venni, mint a többszöri oldal frissítéseknél. Ennek hátránya is volt, ha a weboldalon 
-					történő változásokat nem írtam át a programban, mert akkor eltüntek volna az átírások, de erre ügyeltem.
+					történő változásokat nem írtam át a programban, akkor eltüntek az átírások, de erre ügyeltem.
 				</div>
 
 
@@ -71,7 +71,13 @@
 				</div>
 
 				<div class="folia">
-					Szerencsére az eredeti tervtől nem nagyon tértem el, mert a legelső célom az volt, hogy könnyen kezelhető, átlátható és telefonon is helytálló portfóliót hozzak létre. Útközben voltak nevézségek a képekkel kapcsolatban, mert ablak csökkentésekor nem akartak arányosítva együtt mozogni. Ennek az orvosolás után a következő proglémám a kép és a szöveg egymás melletti elhelyezése volt. Végül nagy nehezen rájöttem, hogy őket külön < div > -be és display -be érdemes rakni, hogy jobban elkülöníthetőek legyenek, illetve a kívánt eredményt elérjem. A protfólióban felhasznált képeket és szövegeket különböző oldalokról és általam készített tartalmakat használtam fel. A probléma megjelenésekor a lent megemlített forrásokból néztem megoldásokat.
+					Szerencsére az eredeti tervtől nem nagyon tértem el, mert a legelső célom az volt, hogy könnyen 
+					kezelhető, átlátható és telefonon is helytálló portfóliót hozzak létre. Útközben voltak nevézségek a 
+					képekkel kapcsolatban, mert ablak csökkentéskor nem akartak arányosítva együtt mozogni. Ennek az orvosolása
+					után a következő problémám a kép és a szöveg egymás melletti elhelyezése volt. Végül rájöttem, hogy őket 
+					külön < div > -be és display -be érdemes rakni, hogy jobban elkülöníthetőek legyenek, illetve a kívánt eredményt elérjem. 
+					A protfólióban felhasznált képeket különböző oldalakról és általam írt és készített tartalmakat használtam fel. 
+					A probléma megjelenésekor a lent megemlített forrásokból néztem megoldásokat.
 				</div>
 
 				<div class="link">
