--- a/tervezes.html
+++ b/tervezes.html
@@ -76,7 +76,7 @@
 					képekkel kapcsolatban, mert ablak csökkentéskor nem akartak arányosítva együtt mozogni. Ennek az orvosolása
 					után a következő problémám a kép és a szöveg egymás melletti elhelyezése volt. Végül rájöttem, hogy őket 
 					külön < div > -be és display -be érdemes rakni, hogy jobban elkülöníthetőek legyenek, illetve a kívánt eredményt elérjem. 
-					A protfólióban felhasznált képeket különböző oldalakról és általam írt és készített tartalmakat használtam fel. 
+					A protfólióban felhasznált képeket különböző oldalakról szereztem, valamint általam írt és készített tartalmakat használtam fel. 
 					A probléma megjelenésekor a lent megemlített forrásokból néztem megoldásokat.
 				</div>
 
